<resources>
    <string name="app_name">Dokitari For Doctors</string>
    <string name="tab_text_1">Messages</string>
    <string name="tab_text_2">Schedule</string>
    <string name="tab_text_3">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_button_label">Send</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="action_previous">Back</string>
    <string name="action_next">Next</string>
    <string name="action_logout">Logout</string>
    <string name="action_support">Contact Us</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_decline">Decline</string>
    <string name="action_accept">Accept</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <string name="title_support">Contact Us</string>
    <string name="title_activity_navigation_start">NavigationStartActivity</string>
    <string name="action_profile">Profile</string>
    <string name="action_appointments">Appointments</string>
    <string name="action_messages">Messages</string>
    <string name="action_send">Send</string>
    <string name="action_collaborate">Collaborate</string>
    <string name="action_completed">Completed</string>
    <string name="action_change_colors">Change Color</string>
    <string name="dokitari">DOKITARI</string>
    <string name="doctor_app">Doctor App</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="action_main_page">Main Page</string>
    <string name="thank_you_message">Thanks For Your Feedback</string>
    <string name="ask_status">Hi, This app is for Doctors, if you are not a Doctor, click the \' I\'m not a Doctor\' button below to download the Patients app</string>
    <string name="ask_status_no">I\'m Not a Doctor</string>
    <string name="ask_status_yes">I\'m a Doctor</string>
    <string name="disclaimer">By using this platform you agree that all views and opinions expressed on this platform are yours as the responding medical personnel and do not in any manner or form directly or indirectly represent the views and opinions  of Dokitari or Giatros.</string>
    <string name="action_home">Home</string>


    <string name="view">View</string>

    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>

    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

</resources>
