<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/action_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_add_a_photo_black_24dp"
            android:title="@string/title_logout" />

        <item
            android:id="@+id/action_support"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/title_support" />
    </group>

</menu>
